--- a/Makefile.vc
+++ b/Makefile.vc
@@ -234,6 +234,7 @@ clean:
 	-del /q $(OMNETPP_LIB_DIR:/=\)\*.lib
 	-del /q $(OMNETPP_LIB_DIR:/=\)\*.dll
 	-del /q $(OMNETPP_LIB_DIR:/=\)\*.ilib
+	-del /q $(OMNETPP_LIB_DIR:/=\)\*.pdb
 	-for %%i in ( $(SAMPLES) ) do \
 	    cd /d $(OMNETPP_SAMPLES_DIR:/=\)\%%i && $(MAKE) $(MOPTS) $(MAKEFILE) clean
 
