--- a/src/tkenv/Makefile.vc
+++ b/src/tkenv/Makefile.vc
@@ -19,7 +19,7 @@ CFLAGS=$(CFLAGS) /DWIN32_DLL
 #
 # Local definitions
 #
-COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../envir" $(TK_CFLAGS) /DBUILDING_TKENV
+COPTS=$(CFLAGS) /I "$(OMNETPP_INCL_DIR)" /I "../envir" $(TK_CFLAGS) /DBUILDING_TKENV /Fd"tkenv.pdb"
 OBJS = tkapp$(TKENV_EMBED_SUFFIX).obj tkcmd.obj tklib.obj inspector.obj \
        inspfactory.obj objinsp.obj modinsp.obj statinsp.obj structinsp.obj \
        arrow.obj visitor.obj tkutil.obj graphlayout.obj
@@ -41,12 +41,12 @@ default: $(TKENV_IF_POSSIBLE)
 tkenv : tkenv$(LIB_SUFFIX)
 
 tkenv.lib : $(OBJS)
-	$(AR) /nologo /out:tkenv.lib $(OBJS)
+	$(AR) /out:tkenv.lib $(OBJS)
 	copy tkenv.lib $(OMNETPP_LIB_DIR:/=\)
-	- copy /b vc?0.pdb $(OMNETPP_LIB_DIR:/=\)\tkenv.pdb 2>nul
+	- copy /b tkenv.pdb $(OMNETPP_LIB_DIR:/=\) 2>nul
 
 tkenv.dll : $(OBJS) $(LIBS)
-	$(SHLIB_LD) /nologo /out:tkenv.dll /implib:tkenv.ilib /subsystem:console /def:tkenv.def $(OBJS) $(LIBS)
+	$(SHLIB_LD) /out:tkenv.dll /implib:tkenv.ilib /subsystem:console /def:tkenv.def $(OBJS) $(LIBS)
 	copy tkenv.dll $(OMNETPP_LIB_DIR:/=\)
 	copy tkenv.ilib $(OMNETPP_LIB_DIR:/=\)
 
