--- a/src/utils/Makefile.vc
+++ b/src/utils/Makefile.vc
@@ -26,10 +26,10 @@ seedtool.exe : seedtool.cc
 	copy seedtool.exe $(OMNETPP_BIN_DIR:/=\)
 
 tcl2c.exe: tcl2c.c
-	$(CC) tcl2c.c
+	$(CXX) tcl2c.c
 
 opp_replace.exe: opp_replace.c
-	$(CC) $(CFLAGS) opp_replace.c
+	$(CXX) $(CFLAGS) opp_replace.c
 
 opp_neddoc: opp_neddoc.in ..\..\configuser.vc
 	copy opp_neddoc.in opp_neddoc
