*** empty log message ***

--- a/samples/fifo/omnetpp.ini
+++ b/samples/fifo/omnetpp.ini
@@ -11,15 +11,17 @@ module-messages = yes
 event-banners = yes
 
 [Tkenv]
-default-run=1
+#default-run=1
 
 [Run 1]
+description="low job arrival rate"
 **.gen.sendIaTime = exponential(0.1)
 **.gen.msgLength = 100
 **.fifo.bitsPerSec = 1000
 output-vector-file = fifo-r1.vec
 
 [Run 2]
+description="high job arrival rate"
 **.gen.sendIaTime = exponential(0.01)
 **.gen.msgLength = 10
 **.fifo.bitsPerSec = 1000
