--- a/samples/queues/omnetpp.ini
+++ b/samples/queues/omnetpp.ini
@@ -26,7 +26,7 @@ slowexec-delay = 300ms
 fifonet.gen.num_messages = 5000
 
 [Run 1]
-# tandem queues
+description = "a single queue"
 network = fifonet
 
 fifonet.num_buffers = 1
@@ -40,7 +40,7 @@ fifonet.fifo[0].service_time = exponential(2)
 fifonet.fifo[*].service_time = exponential(2)
 
 [Run 2]
-# a closed network of rings
+description = "closed queueing network of ring topology"
 network = ring
 
 # Please mind that the ring network does not contain an internal
@@ -53,6 +53,7 @@ ring.fifo[0].service_time = exponential(3)
 ring.fifo[*].service_time = exponential(2)
 
 [Run 3]
+description = "five tandem queues"
 network = fifonet
 
 fifonet.num_buffers = 5
@@ -63,6 +64,7 @@ fifonet.fifo[0].service_time = exponential(2)
 fifonet.fifo[*].service_time = exponential(2)
 
 [Run 4]
+description = "ring, with number of queues as input"
 network = ring
 
 #ring.num_buffers = 3
