--- a/samples/sockets/omnetpp.ini
+++ b/samples/sockets/omnetpp.ini
@@ -9,15 +9,17 @@ module-messages = yes
 event-banners = yes
 
 [Tkenv]
-default-run=1
+#default-run=1
 
 [Run 1]
+description="HTTP model"
 network = httpNet
 **.cloud.propDelay = 0.1s
 **.server.serviceTime= 0.1s
 **.client[*].sendIaTime = exponential(15)
 
 [Run 2]
+description="Telnet model"
 network = telnetNet
 **.cloud.propDelay = 0.1s
 **.server.serviceTime= 0.1s
