--- a/samples/tokenring/omnetpp.ini
+++ b/samples/tokenring/omnetpp.ini
@@ -15,7 +15,7 @@ status-frequency = 50000
 performance-display = no
 
 [Tkenv]
-default-run=1
+#default-run=1
 extra-stack=20000 ;20K, but 10K is probably enough
 
 [Parameters]
@@ -24,20 +24,20 @@ token.comp[*].gen.messageLength = uniform(1,4500)
 token.comp[*].mac.queueMaxLen = 20
 
 [Run 1]
-# well loaded ring (if run with numStations=5)
+description="well loaded ring (if run w/ numStations=5)"
 token.THT=0.2s
 token.comp[*].gen.interArrivalTime = truncnormal(0.023, 0.006)
 output-vector-file = token1.vec
 
 [Run 2]
-# definately overloaded ring
+description="overloaded ring (if run w/ numStations=5)"
 token.numStations = 7
 token.THT=0.2s
 token.comp[*].gen.interArrivalTime = truncnormal(0.015, 0.003)
 output-vector-file = token2.vec
 
 [Run 3]
-# a large network
+description="ring of 100 stations"
 token.numStations = 100
 token.THT=0.2s
 token.comp[*].gen.interArrivalTime = truncnormal(0.40, 0.2)
