--- a/samples/aloha/omnetpp.ini
+++ b/samples/aloha/omnetpp.ini
@@ -8,38 +8,46 @@ alohaNet.host[*].pkLenBits=952 #=119 bytes, so that (with +1 byte guard) slotTim
 alohaNet.host[*].radioDelay=0.01
 
 [Run 1]
-# pure Aloha (no slots)
+description="pure Aloha, overloaded"
+# no slots
 alohaNet.slotTime=0
 # too frequent transmissions result in high collision rate and low channel utilization
 alohaNet.host[*].iaTime=exponential(2)
 
 [Run 2]
-# pure Aloha (no slots)
+description="pure Aloha, optimal load"
+# no slots
 alohaNet.slotTime=0
 # near optimal load, channel utilization is near theoretical maximum 1/2e
 alohaNet.host[*].iaTime=exponential(6)
 
 [Run 3]
-# pure Aloha (no slots)
+description="pure Aloha, low traffic"
+# no slots
 alohaNet.slotTime=0
 # very low traffic results in channel being idle mosy of the time
 alohaNet.host[*].iaTime=exponential(30)
 
 
 [Run 4]
-# slotted Aloha (slotTime = pkLen/txRate = 960/9600 = 0.1s)
+description="slotted Aloha, overloaded"
+# slotTime = pkLen/txRate = 960/9600 = 0.1s
 alohaNet.slotTime=0.1s
 # too frequent transmissions result in high collision rate and low channel utilization
 alohaNet.host[*].iaTime=exponential(0.5)
 
 [Run 5]
-# slotted Aloha (slotTime = pkLen/txRate = 960/9600 = 0.1s)
+description="slotted Aloha, optimal load"
+# slotTime = pkLen/txRate = 960/9600 = 0.1s
 alohaNet.slotTime=0.1s
 # near optimal load, channel utilization is near theoretical maximum 1/e
 alohaNet.host[*].iaTime=exponential(2)
 
 [Run 6]
-# slotted Aloha (slotTime = pkLen/txRate = 960/9600 = 0.1s)
+description="slotted Aloha, low traffic"
+# slotTime = pkLen/txRate = 960/9600 = 0.1s
 alohaNet.slotTime=0.1s
 # very low traffic results in channel being idle mosy of the time
 alohaNet.host[*].iaTime=exponential(20)
+
+
