--- a/samples/fddi/omnetpp.ini
+++ b/samples/fddi/omnetpp.ini
@@ -30,11 +30,13 @@ TUBs.NROIFControlFile = "nroifct"
 TUBs.SROIFControlFile = "sroifct"
 
 [Run 1]
+description="TUBw network"
 network = TUBw
 output-vector-file = FDDI-run-1-.vec
 snapshot-file = FDDI-run-1-.sna
 
 [Run 2]
+description="TUBs network"
 network = TUBs
 output-vector-file = FDDI-run-2-.vec
 snapshot-file = FDDI-run-2-.sna
@@ -42,6 +44,7 @@ TUBs.SSM_OIF_type = "SSM_OIF_by_frequency"
 TUBs.SSM_OIF_frequency = 1000
 
 [Run 3]
+description="TUBs network"
 network = TUBs
 output-vector-file = FDDI-run-3-.vec
 snapshot-file = FDDI-run-3-.sna
