*** empty log message ***

--- a/samples/dyna/omnetpp.ini
+++ b/samples/dyna/omnetpp.ini
@@ -16,7 +16,7 @@ status-frequency = 50000
 performance-display = no
 
 [Tkenv]
-default-run=1
+#default-run=1
 
 [Parameters]
 dyna.client[*].connIaTime =  exponential( 10s )
@@ -25,11 +25,14 @@ dyna.client[*].numQuery =     truncnormal( 3, 1 )
 dyna.server.processingTime =  0.2s
 
 [Run 1]
+description = "number of client computers as input"
 #dyna.numClients =
 
 [Run 2]
+description = "8 client computers"
 dyna.numClients = 8
 
 [Run 3]
+description = "20 client computers"
 dyna.numClients = 20
 
