*** empty log message ***

--- a/samples/cqn/omnetpp.ini
+++ b/samples/cqn/omnetpp.ini
@@ -12,6 +12,7 @@ status-frequency=10000
 #default-run=1
 
 [Run 1]
+description="cqnB (tandem queues wrapped in compound modules)"
 network=cqnB
 *.numTandems = 3
 *.tandemQueue[*].numQueues = 5
@@ -21,6 +22,7 @@ network=cqnB
 *.tandemQueue[*].qDelay=1
 
 [Run 2]
+description="cqnA (all tandem queues on the top level)"
 network=cqnA
 *.numTandems = 3
 *.numQueuesPerTandem = 5
