--- a/samples/cqn/parsim/omnetpp.ini
+++ b/samples/cqn/parsim/omnetpp.ini
@@ -23,6 +23,7 @@ autoflush=true
 status-frequency=10000
 
 [Tkenv]
+# comment out the following line for run selection to be offered
 default-run=1
 
 [Partitioning]
@@ -31,19 +32,21 @@ default-run=1
 *.tandemQueue[2]**.partition-id=2
 
 [Run 1]
+description="loose coupling --> good performance"
 network=cqnB
 *.numTandems = 3
-*.tandemQueue[*].numQueues = 50
+*.tandemQueue[*].numQueues = 50   # high load per partition (good)
 *.tandemQueue[*].queue[*].numInitialJobs=2
 *.tandemQueue[*].queue[*].serviceTime=exponential(10);
-*.sDelay=100
+*.sDelay=100   # good lookahead
 *.tandemQueue[*].qDelay=1
 
 [Run 2]
+description="tight coupling --> poor performance"
 network=cqnB
 *.numTandems = 3
-*.numQueuesPerTandem = 5
+*.numQueuesPerTandem = 5   # low load per partition (bad)
 *.queue[*].numInitialJobs=2
 *.queue[*].serviceTime=exponential(10);
-*.sDelay=1
+*.sDelay=1   # poor lookahead
 *.qDelay=1
