*** empty log message ***

--- a/samples/routing/networks/omnetpp.ini
+++ b/samples/routing/networks/omnetpp.ini
@@ -1,7 +1,7 @@
 #
 # If OMNeT++ was compiled with support for dynamic loading of NED files 
 # (WITH_NETBUILDER option), you can test routing on any topology without
-# nedc or C++ compilation. Some NED files are already provided here.
+# nedtool or C++ compilation. Some NED files are already provided here.
 #
 # You just need to start the "routing" program (../routing) with this place
 # as working directory. Typing
