*** empty log message ***

--- a/samples/sockets/Makefile.vc
+++ b/samples/sockets/Makefile.vc
@@ -153,41 +153,20 @@ makefiles:
 re-makemake: makefiles
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-cloud.obj: cloud.cc \
-  netpkt_m.h
+cloud.obj: cloud.cc
 csocketrtscheduler.obj: csocketrtscheduler.cc \
   csocketrtscheduler.h
 exthttpclient.obj: exthttpclient.cc \
-  httpmsg_m.h \
-  csocketrtscheduler.h \
-  netpkt_m.h
+  csocketrtscheduler.h
 exttelnetclient.obj: exttelnetclient.cc \
-  telnetpkt_m.h \
-  csocketrtscheduler.h \
-  netpkt_m.h
-httpclient.obj: httpclient.cc \
-  httpmsg_m.h \
-  netpkt_m.h
-httpmsg_m.obj: httpmsg_m.cc \
-  httpmsg_m.h \
-  netpkt_m.h
+  csocketrtscheduler.h
+httpclient.obj: httpclient.cc
 httpserver.obj: httpserver.cc \
   httpserver.h \
-  httpmsg_m.h \
-  queuebase.h \
-  netpkt_m.h
-netpkt_m.obj: netpkt_m.cc \
-  netpkt_m.h
+  queuebase.h
 queuebase.obj: queuebase.cc \
   queuebase.h
-telnetclient.obj: telnetclient.cc \
-  telnetpkt_m.h \
-  netpkt_m.h
-telnetpkt_m.obj: telnetpkt_m.cc \
-  telnetpkt_m.h \
-  netpkt_m.h
+telnetclient.obj: telnetclient.cc
 telnetserver.obj: telnetserver.cc \
   telnetserver.h \
-  telnetpkt_m.h \
-  queuebase.h \
-  netpkt_m.h
+  queuebase.h
