--- a/samples/sockets/sockets.dsp.in
+++ b/samples/sockets/sockets.dsp.in
@@ -7,21 +7,21 @@
 CFG=sockets - Win32 Debug Tkenv
 !MESSAGE This is not a valid makefile. To build this project using NMAKE,
 !MESSAGE use the Export Makefile command and run
-!MESSAGE 
+!MESSAGE
 !MESSAGE NMAKE /f "sockets.mak".
-!MESSAGE 
+!MESSAGE
 !MESSAGE You can specify a configuration when running NMAKE
 !MESSAGE by defining the macro CFG on the command line. For example:
-!MESSAGE 
+!MESSAGE
 !MESSAGE NMAKE /f "sockets.mak" CFG="sockets - Win32 Debug Tkenv"
-!MESSAGE 
+!MESSAGE
 !MESSAGE Possible choices for configuration are:
-!MESSAGE 
+!MESSAGE
 !MESSAGE "sockets - Win32 Debug Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "sockets - Win32 Debug Cmdenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "sockets - Win32 Release Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "sockets - Win32 Release Cmdenv" (based on "Win32 (x86) Console Application")
-!MESSAGE 
+!MESSAGE
 
 # Begin Project
 # PROP AllowPerConfigDependencies 0
@@ -128,7 +128,7 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /machine:I386
 # ADD LINK32 cmdenv.lib sim_std.lib envir.lib nedxml.lib @XML_LIBS@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x10000 /subsystem:console /machine:I386 /libpath:"@OMNETPP_LIB_DIR@"
 
-!ENDIF 
+!ENDIF
 
 # Begin Target
 
@@ -161,7 +161,117 @@ SOURCE=.\httpclient.cpp
 # End Source File
 # Begin Source File
 
+SOURCE=.\httpmsg.msg
+
+!IF  "$(CFG)" == "sockets - Win32 Debug Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\httpmsg.msg
+InputName=httpmsg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Debug Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\httpmsg.msg
+InputName=httpmsg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Release Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\httpmsg.msg
+InputName=httpmsg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Release Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\httpmsg.msg
+InputName=httpmsg
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ENDIF
+
+# End Source File
+# Begin Source File
+
+SOURCE=.\httpmsg_m.cpp
+# End Source File
+# Begin Source File
+
 SOURCE=.\httpserver.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\netpkt.msg
+
+!IF  "$(CFG)" == "sockets - Win32 Debug Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\netpkt.msg
+InputName=netpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Debug Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\netpkt.msg
+InputName=netpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Release Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\netpkt.msg
+InputName=netpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Release Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\netpkt.msg
+InputName=netpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ENDIF
+
+# End Source File
+# Begin Source File
+
+SOURCE=.\netpkt_m.cpp
 # End Source File
 # Begin Source File
 
@@ -170,6 +280,61 @@ SOURCE=.\queuebase.cpp
 # Begin Source File
 
 SOURCE=.\telnetclient.cpp
+# End Source File
+# Begin Source File
+
+SOURCE=.\telnetpkt.msg
+
+!IF  "$(CFG)" == "sockets - Win32 Debug Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\telnetpkt.msg
+InputName=telnetpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Debug Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\telnetpkt.msg
+InputName=telnetpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Release Tkenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\telnetpkt.msg
+InputName=telnetpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ELSEIF  "$(CFG)" == "sockets - Win32 Release Cmdenv"
+
+# Begin Custom Build - Processing $(InputPath) with opp_msgc (needs Perl!)
+InputPath=.\telnetpkt.msg
+InputName=telnetpkt
+
+"$(InputName)_m.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
+	@OMNETPP_BIN_DIR@\opp_msgc -s _m.cpp $(InputName).msg
+
+# End Custom Build
+
+!ENDIF
+
+# End Source File
+# Begin Source File
+
+SOURCE=.\telnetpkt_m.cpp
 # End Source File
 # Begin Source File
 
