changed to dynamic ned loading

--- a/samples/queues/omnetpp.ini
+++ b/samples/queues/omnetpp.ini
@@ -1,4 +1,5 @@
 [General]
+preload-ned-files=*.ned
 ini-warnings = no
 # The name below is optional, default is omnetpp.sca
 output-scalar-file = fifo.sca
