--- a/samples/tictoc/omnetpp.ini
+++ b/samples/tictoc/omnetpp.ini
@@ -1,6 +1,9 @@
 # This file is shared by all tictoc simulations.
 # Lines beginning with `#' are comments
 
+[General]
+preload-ned-files=*.ned
+
 [Parameters]
 
 tictoc4.toc.limit = 5
