--- a/samples/fifo/.tkenvrc
+++ b/samples/fifo/.tkenvrc
@@ -24,6 +24,7 @@ config filtobjlist-category	{mqsgvo}
 config filtobjlist-maxcount	{100000}
 config editor-findstring	{}
 config rununtil-time	{}
+config dontshow	{}
 config editor-regexp	{0}
 config filtobjlist-class	{}
 config rununtil-mode	{Express (tracing off)}
@@ -35,6 +36,6 @@ config editor-case-sensitive	{0}
 config editor-whole-words	{0}
 config filtobjlist-order	{Class}
 inspector "fifonet" "FifoNet" "2" "443x277+370+366"
-inspector "fifonet.sink.queueing time vector" "cOutVector" "2" "353x197+9+467"
 inspector "fifonet.fifo.queue" "cQueue" "1" "351x230+11+203"
+inspector "fifonet.sink.queueing time vector" "cOutVector" "2" "353x197+9+467"
 
