--- a/samples/tokenring/tokenring.dsp.in
+++ b/samples/tokenring/tokenring.dsp.in
@@ -53,7 +53,7 @@ BSC32=bscmake.exe
 # ADD BSC32 /nologo
 LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /debug /machine:I386
-# ADD LINK32 tkenv.lib @TCLTK_LIBS@ sim_std.lib envir.lib nedxml.lib @XML_LIBS@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x10000 /subsystem:console /debug /machine:I386 /libpath:"@OMNETPP_LIB_DIR@"
+# ADD LINK32 tkenv.lib @TK_LIBS@ sim_std.lib envir.lib nedxml.lib @XML_LIBS@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x10000 /subsystem:console /debug /machine:I386 /libpath:"@OMNETPP_LIB_DIR@"
 
 !ELSEIF  "$(CFG)" == "tokenring - Win32 Debug Cmdenv"
 
