--- a/samples/dyna/omnetpp.ini
+++ b/samples/dyna/omnetpp.ini
@@ -26,7 +26,7 @@ dyna.client[*].numQuery =     truncnormal( 3, 1 )
 dyna.server.processingTime =  0.2s
 
 [Run 1]
-description = "number of client computers as input"
+description = "ask number of client computers"
 #dyna.numClients =
 
 [Run 2]
