--- a/samples/sockets/omnetpp.ini
+++ b/samples/sockets/omnetpp.ini
@@ -14,6 +14,7 @@ event-banners = yes
 [Run 1]
 description="HTTP model"
 network = httpNet
+**.numClients = 3
 **.cloud.propDelay = 0.1s
 **.server.serviceTime= 0.1s
 **.client[*].sendIaTime = exponential(15)
@@ -21,6 +22,7 @@ network = httpNet
 [Run 2]
 description="Telnet model"
 network = telnetNet
+**.numClients = 3
 **.cloud.propDelay = 0.1s
 **.server.serviceTime= 0.1s
 **.client[*].sendIaTime = exponential(3)
