--- a/samples/aloha/Makefile.vc
+++ b/samples/aloha/Makefile.vc
@@ -114,4 +114,5 @@ makefiles:
 re-makemake: makefiles
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
-
+host.obj: host.cpp
+server.obj: server.cpp
